# mobi_header

./: .gitignore  README.md  pyproject.toml
src/mobi_header/: __init__.py  mobi_header.py
test/: example.azw3  test_change_exth_metadata.py
